--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ python-dotenv==1.1.1
 requests==2.32.5
 six==1.17.0
 SQLAlchemy==2.0.43
+PyMySQL==1.1.1
 transbank-sdk==6.1.0
 typing_extensions==4.15.0
 tzdata==2025.2
